# allocator-lib

./: CMakeLists.txt  LICENSE  README.md  main.c
source/: GeneralPurposeAllocation.c  SlabAllocator.c
